# build

./: .gitignore  README.md
0_script/windows/: build.bat
2_cmake/00_hello/: CMakeLists.txt  readme.docx  readme.txt
2_cmake/01_adding-library/: readme.txt
2_cmake/01_adding-library/1_windows/: CMakeLists.txt
2_cmake/01_adding_library/: readme.docx
2_cmake/10_vs/10_vs__02_generate_cmake_proj_from_vs/: 10_vs__02_generate_cmake_proj_from_vs.cpp  10_vs__02_generate_cmake_proj_from_vs.h  CMakeLists.txt
2_cmake/11_msvc/: readme.txt
2_cmake/12_vs-code/: readme.docx  readme.txt
2_cmake/20_subdirectories_and_target-props/linux/say-hello/: CMakeLists.txt
2_cmake/20_subdirectories_and_target_props/: readme.docx
4_matlab/00_hello/: func.m  func.prj
4_matlab/01_matlab_to_vs_via_dll/: readme.txt
4_matlab/01a_dynamically_linked_library/: func_01.m
4_matlab/01b_statically_linked_library/: func_01.m  func_01.prj  readme.txt
4_matlab/02_scalar_mult/: func.prj  testBench.m
4_matlab/03_vector_mult/: func.prj  testBench.m
4_matlab/04_matrix_mult/: func.m  func.prj  testBench.m
4_matlab/10_1D_conv/: func.m  func.prj  testBench.m
4_matlab/11_2D_conv/: func.prj  testBench.m
4_matlab/20_edge_detection/: edgeDetections.m  sobel.m
4_matlab/20_image_filtering/: func.m  func.prj  testBench.m
4_matlab/21_imwarp/: func.prj  matrix.m
4_matlab/21_imwarp_dll_c/: func.m  func.prj  matrix.m  testBench.m
4_matlab/22_imwarp_source/: func.prj
4_matlab/23_imwarp_dll_cpp/: func.prj
4_matlab/24_detect_SURF_features/: func_detectSURFFeatures.m  script.m  (+1 more)
(+1102 files in other folders)
