# CMakeList.txt : CMake project for 10_vs__02_generate_cmake_proj_from_vs, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (10_vs__02_generate_cmake_proj_from_vs "10_vs__02_generate_cmake_proj_from_vs.cpp" "10_vs__02_generate_cmake_proj_from_vs.h")

# TODO: Add tests and install targets if needed.
